add swagger docs to all existing api
