# handlers/api/handler.go
@@ -1,0 +1,28 @@
+package api
+
+// @title Dora Explorer API
+// @version 1.0
+// @description This is the API documentation for the Dora Explorer application.
+// @termsOfService http://swagger.io/terms/
+
+// @contact.name API Support
+// @contact.url http://www.swagger.io/support
+// @contact.email support@swagger.io
+
+// @license.name MIT
+// @license.url https://opensource.org/licenses/MIT
+
+// @host localhost:8080
+// @BasePath /api/v1
+// @schemes http https
+
+// @securityDefinitions.basic BasicAuth
+
+// @tag.name Validator
+// @tag.description Validator related endpoints
+
+// @tag.name Epoch
+// @tag.description Epoch related endpoints
+
+// @tag.name clients
+// @tag.description Client information endpoints
